[project]
name = "fancy"
version = "0.1.0"
description = "A fancy terminal beautifier and formatter tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "eggkiller1101", email = "akikodesu222@gmail.com"}
]
requires-python = ">=3.8"
keywords = ["terminal", "beautifier", "formatter", "cli", "syntax-highlighting", "fancy"]

[project.urls]
Homepage = "https://github.com/eggkiller1101/fancy"
Repository = "https://github.com/eggkiller1101/fancy"
Issues = "https://github.com/eggkiller1101/fancy/issues"

[project.scripts]
fancy = "fancy.cli:cli"
fc = "fancy.cli:cli"

[project.entry-points."fancy.plugins"]
json = "fancy.plugins.json_plugin:JSONPlugin"
xml = "fancy.plugins.xml_plugin:XMLPlugin"
yaml = "fancy.plugins.yaml_plugin:YAMLPlugin"
toml = "fancy.plugins.toml_plugin:TOMLPlugin"
log = "fancy.plugins.log_plugin:LogPlugin"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]
all = [
    "lxml>=4.9.0",  # 更好的XML支持
    "ujson>=5.8.0",  # 更快的JSON处理
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project.dependencies]
click = ">=8.1.7"
rich = ">=13.6.0"
pygments = ">=2.16.1"
pydantic = ">=2.5.0"
pyyaml = ">=6.0.1"
tomli = {version = ">=2.0.0", markers = "python_version < '3.11'"}
tomli-w = ">=1.0.0"
chardet = ">=5.2.0"
colorama = ">=0.4.6"  # Windows颜色支持
